--- a/scss/3-components/_button.scss
+++ b/scss/3-components/_button.scss
@@ -13,124 +13,108 @@
  * 8. Align text if button has a width
  * 9. Required for `a`.
  */
- .ui-btn {
-    /* 1 */
-    margin: 0;
-    /* 2 */
-    border: none;
-    /* 3 */
-    overflow: hidden;
-    /* 4 */
-    font: inherit;
-    color: inherit;
-    /* 5 */
-    text-transform: none;
-    /* 6 */
-    font-family: $subtitle-font-stack;
-    display: inline-block;
-    box-sizing: border-box;
-    padding: 14px 30px;
-    vertical-align: middle;
-    font-size: $global-font-size;
-    border-radius: 2px;
-    position: relative;
-    text-transform: uppercase;
-    -webkit-transition: 0.1s ease-in-out;
-    transition: 0.1s ease-in-out;
-    -webkit-transition-property: color, background-color, border-color;
-    transition-property: color, background-color, border-color;
-    -webkit-appearance: none;
-    -webkit-tap-highlight-color: rgba(0, 0, 0, .18); -moz-osx-font-smoothing: grayscale;
-    -webkit-font-smoothing: antialiased;
-    -webkit-touch-callout: none;
-    /* iOS Safari */
-    -webkit-user-select: none;
-    /* Safari */
-    -khtml-user-select: none;
-    /* Konqueror HTML */
-    -moz-user-select: none;
-    /* Firefox */
-    -ms-user-select: none;
-    /* Internet Explorer/Edge */
-    user-select: none;
-    /* 7 */
-    line-height: $global-title-line-height;
-    /* 8 */
-    text-align: center;
-    /* 9 */
-    text-decoration: none;
+.ui-btn {
+  /* 1 */
+  margin: 0;
+  /* 2 */
+  border: none;
+  /* 3 */
+  overflow: hidden;
+  /* 4 */
+  font: inherit;
+  color: inherit;
+  /* 5 */
+  text-transform: none;
+  /* 6 */
+  font-family: $subtitle-font-stack;
+  display: inline-block;
+  box-sizing: border-box;
+  padding: 14px 30px;
+  vertical-align: middle;
+  font-size: $global-font-size;
+  border-radius: 2px;
+  position: relative;
+  text-transform: uppercase;
+  -webkit-transition: 0.1s ease-in-out;
+  transition: 0.1s ease-in-out;
+  -webkit-transition-property: color, background-color, border-color;
+  transition-property: color, background-color, border-color;
+  -webkit-appearance: none;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, .18);
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-font-smoothing: antialiased;
+  -webkit-touch-callout: none;
+  /* iOS Safari */
+  -webkit-user-select: none;
+  /* Safari */
+  -khtml-user-select: none;
+  /* Konqueror HTML */
+  -moz-user-select: none;
+  /* Firefox */
+  -ms-user-select: none;
+  /* Internet Explorer/Edge */
+  user-select: none;
+  /* 7 */
+  line-height: $global-title-line-height;
+  /* 8 */
+  text-align: center;
+  /* 9 */
+  text-decoration: none;
 }
-
 
 .ui-btn:not(:disabled) {
   cursor: pointer;
 }
-
-
 /*
  * Remove the inner border and padding in Firefox.
  */
-
 .ui-btn::-moz-focus-inner {
-    border: 0;
-    padding: 0;
+  border: 0;
+  padding: 0;
 }
-
-
 /* Hover */
-
-.ui-btn:hover,
-.ui-btn:focus {
-    /* 8 */
-    text-decoration: none;
+.ui-btn:focus,
+.ui-btn:hover {
+  /* 8 */
+  text-decoration: none;
 }
-
-
 /* Hover Active Focus shader*/
-
 .ui-btn:before {
-    background-color: rgba(0, 0, 0, .3);
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    -webkit-transition: 0.1s ease-in-out;
-    transition: 0.1s ease-in-out;
-    -webkit-transition-property: opacity;
-    transition-property: opacity;
-    opacity: 0;
-    pointer-events: none;
-    content: ""
+  background-color: rgba(0, 0, 0, .3);
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  -webkit-transition: 0.1s ease-in-out;
+  transition: 0.1s ease-in-out;
+  -webkit-transition-property: opacity;
+  transition-property: opacity;
+  opacity: 0;
+  pointer-events: none;
+  content: "";
 }
-
 
 .ui-btn:focus::before,
 .ui-btn:hover::before {
-    opacity: .3
+  opacity: 0.3;
 }
-
 
 .ui-btn:active::before {
-    opacity: .6
+  opacity: 0.6;
 }
-
 
 .ui-btn:disabled::before {
-    opacity: 0;
+  opacity: 0;
 }
-
 /*
 *Button styles
 */
 //solid style
+
 .ui-btn-solid {
-  @include ui-btn-style ($white, $light-grey, $text-color)
-
-
-  &--blue {
-    @include ui-btn-style ($robin-blue, $robin-blue,  $charcoal-grey)
+  @include ui-btn-style ($white, $light-grey, $text-color) &--blue {
+     @include ui-btn-style ($robin-blue, $robin-blue, $charcoal-grey)
   }
 }
-
 //outline style
